--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Video
+*.avi
 
 # Created by https://www.gitignore.io/api/python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,visualstudiocode
